[gd_scene load_steps=4 format=3 uid="uid://jv0i5vm0j757"]

[ext_resource type="Script" path="res://Scripts/HUD.gd" id="1_xnak7"]
[ext_resource type="Texture2D" uid="uid://dxnurr3cdkx6" path="res://Assets/GameSprites/pixel_art_keys/key_small2.png" id="2_ar3wc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_af20w"]
bg_color = Color(0, 0, 0, 0.227451)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_xnak7")

[node name="Panel" type="Panel" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 194.0
offset_bottom = 83.0
theme_override_styles/panel = SubResource("StyleBoxFlat_af20w")

[node name="KeyHUD" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 32.0
offset_top = 72.0
offset_right = 72.0
offset_bottom = 112.0
rotation = -1.57079
texture = ExtResource("2_ar3wc")

[node name="KeyHUD2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 88.0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 112.0
rotation = -1.57079
texture = ExtResource("2_ar3wc")

[node name="KeyHUD3" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 144.0
offset_top = 72.0
offset_right = 184.0
offset_bottom = 112.0
rotation = -1.57079
texture = ExtResource("2_ar3wc")
